# kwk_extension

./: CMakeLists.txt  README.md  benchmark.cpp  main.cpp  main_tile.cpp  notes.data  tile_imp.hpp  transform_vectorized.hpp  vecto_extension.hpp
cmake/: make_unit.cmake
simd/: context.hpp
test/: CMakeLists.txt  copy.cpp  generator.cpp  numeric.cpp  predicates.cpp  reduce.cpp  test.hpp  transform.cpp
test/integration/fetch-test/: CMakeLists.txt
